RESOLVED FIXED110053
Regression(r143124): Caused plugins/plugin-javascript-access.html to fail
https://bugs.webkit.org/show_bug.cgi?id=110053
Summary Regression(r143124): Caused plugins/plugin-javascript-access.html to fail
Chris Dumez
Reported 2013-02-17 07:15:30 PST
plugins/plugin-javascript-access.html started to fail after <http://trac.webkit.org/changeset/143124> with the following diff: --- /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/plugins/plugin-javascript-access-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/plugins/plugin-javascript-access-actual.txt @@ -1,3 +1,37 @@ +Name: WebKit Test PlugIn + +Description: Simple Netscape® plug-in that handles test content for WebKit + +Filename: libTestNetscapePlugin.so + +Mime Types: + +Type: application/x-webkit-test-netscape + +Description: test netscape content + +Suffixes: testnetscape + + +Plugin.item() works. + +Plugin.namedItem() works. + +Type: image/png + +Description: png image + +Suffixes: png + + +Plugin.item() works. + +Plugin.namedItem() works. + +PluginArray.item() works. + +PluginArray.namedItem() works. + Name: WebKit Test PlugIn Description: Simple Netscape® plug-in that handles test content for WebKit @@ -41,3 +75,13 @@ MimeTypeArray.item() works. MimeTypeArray.namedItem() works. + +Type: application/x-webkit-test-netscape + +Description: test netscape content + +Suffixes: testnetscape + +MimeTypeArray.item() works. + +MimeTypeArray.namedItem() works.
Attachments
Patch (1.42 KB, patch)
2013-02-17 07:17 PST, Chris Dumez
no flags
Patch (3.04 KB, patch)
2013-02-17 07:25 PST, Chris Dumez
ap: review+
Patch for landing (3.06 KB, patch)
2013-02-17 10:57 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2013-02-17 07:17:53 PST
Chris Dumez
Comment 2 2013-02-17 07:22:25 PST
Temporarily mark the test as failing for EFL WK2 port in http://trac.webkit.org/changeset/143128.
Chris Dumez
Comment 3 2013-02-17 07:25:58 PST
Created attachment 188765 [details] Patch Unskip test for EFL WK2.
Chris Dumez
Comment 4 2013-02-17 10:57:05 PST
Created attachment 188769 [details] Patch for landing
Chris Dumez
Comment 5 2013-02-17 11:01:39 PST
Note You need to log in before you can comment on or make changes to this bug.