Regression(r143124): Caused plugins/plugin-javascript-access.html to fail https://bugs.webkit.org/show_bug.cgi?id=110053

Reviewed by Alexey Proskuryakov.

Source/WebKit2:

Clear m_plugins in loadPluginsIfNecessary() before populating the
vector again. We get duplicates otherwise.

* UIProcess/Plugins/PluginInfoStore.cpp:
(WebKit::PluginInfoStore::loadPluginsIfNecessary):

LayoutTests:

Unskip plugins/plugin-javascript-access.html for WK2 EFL now that the
Test is passing again.

* platform/efl-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/128333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143132 268f45cc-cd09-0410-ab3c-d52691b4dbfc